--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WizQuiz"
         tools:targetApi="31">
-        <activity
-            android:name=".MainActivity2"
-            android:exported="false" />
+
         <activity
             android:name=".CodeConfirmationActivity"
             android:exported="false" />
@@ -30,6 +28,7 @@
         <activity
             android:name=".HomeActivity"
             android:exported="false" />
+        <activity android:name=".ForgotPasswordActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
